Adds DSL code and models for watch face code lab.
Bug: 78130133
Change-Id: I09a655aab21e05fc9d1880230532a6ba7dfbd610

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:value="true" />
 
         <service
-            android:name=".service.AbstractKotlinWatchFace"
+            android:name=".AnalogDslWatchFace"
             android:label="@string/my_analog_name"
             android:permission="android.permission.BIND_WALLPAPER">
             <meta-data
