Adds background image support and fixes exceptions.
Bug: 78130133
Change-Id: I2aba35d2ca60368a0281b049d2a9f1f6afc58786

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,10 @@
                 android:resource="@xml/watch_face" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_analog" />
+                android:resource="@drawable/background_image" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_analog" />
+                android:resource="@drawable/background_image" />
 
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" />
