--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext {
+
+        // App version
+        versionName = '1.0.0'
+        versionCode = 10000
+
+        // SDK and tools
+        compileSdkVersion = 26
+        minSdkVersion = 23
+        targetSdkVersion = 26
+
+        // App dependencies
+        androidGradlePluginVersion = '3.1.0'
+        googlePlayServicesClientVersion = '12.0.1'
+        kotlin_version = '1.2.41'
+        supportLibraryVersion = '27.1.1'
+        wearableSupportLibraryVersion = '2.3.0'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-beta4'
+        classpath "com.android.tools.build:gradle:$androidGradlePluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
