--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Apr 16 14:12:19 PDT 2018
-distributionBase = GRADLE_USER_HOME
-distributionPath = wrapper/dists
-zipStoreBase = GRADLE_USER_HOME
-zipStorePath = wrapper/dists
-distributionUrl = https\://services.gradle.org/distributions/gradle-4.4-all.zip
+#Wed Nov 07 07:54:14 PST 2018
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
