--- a/base/build.gradle
+++ b/base/build.gradle
@@ -41,13 +41,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinStdlibJdk7Version"
-    implementation "com.google.android.gms:play-services-wearable:$rootProject.playServicesWearableVersion"
-    implementation "androidx.percentlayout:percentlayout:$rootProject.androidXVersion"
-    implementation "androidx.legacy:legacy-support-v4:$rootProject.androidXVersion"
-    implementation "androidx.recyclerview:recyclerview:$rootProject.androidXVersion"
-    implementation "androidx.palette:palette:$rootProject.androidXVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+    implementation "com.google.android.gms:play-services-wearable:17.0.0"
+    implementation "androidx.percentlayout:percentlayout:1.0.0"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.palette:palette:1.0.0"
 
-    implementation "com.google.android.support:wearable:$rootProject.wearableVersion"
-    compileOnly "com.google.android.wearable:wearable:$rootProject.wearableVersion"
+    implementation "com.google.android.support:wearable:2.6.0"
+    compileOnly "com.google.android.wearable:wearable:2.6.0"
 }
