--- a/build.gradle
+++ b/build.gradle
@@ -23,17 +23,17 @@ buildscript {
         versionCode = 10002
 
         // SDK and tools
-        compileSdkVersion = 28
+        compileSdkVersion = 31
         minSdkVersion = 23
-        targetSdkVersion = 28
+        targetSdkVersion = 31
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -43,7 +43,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
