--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -18,7 +18,6 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -41,13 +40,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
-    implementation "com.google.android.gms:play-services-wearable:17.0.0"
+    implementation "com.google.android.gms:play-services-wearable:17.1.0"
     implementation "androidx.percentlayout:percentlayout:1.0.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.palette:palette:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.palette:palette-ktx:1.0.0"
 
-    implementation "com.google.android.support:wearable:2.7.0"
-    compileOnly "com.google.android.wearable:wearable:2.7.0"
+    implementation "com.google.android.support:wearable:2.8.1"
+    compileOnly "com.google.android.wearable:wearable:2.8.1"
 }
