--- a/complete/src/main/AndroidManifest.xml
+++ b/complete/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <service
             android:name=".AnalogDslWatchFace"
             android:label="@string/my_analog_name"
-            android:permission="android.permission.BIND_WALLPAPER">
+            android:permission="android.permission.BIND_WALLPAPER"
+            android:exported="true">
             <meta-data
                 android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
